tooling/nargo_cli/tests/snapshots/execution_success/arithmetic_binary_operations/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field, y: Field, z: Field) -> pub Field {
    assert(((y as u8) % 2_u8) == 0_u8);
    let a: Field = x + x;
    let b: Field = a - y;
    let c: Field = b * z;
    let d: Field = c / a;
    d * a
}
